Foundation single page customisation

--- a/index.html
+++ b/index.html
@@ -11,105 +11,154 @@
   <body>
     <div class="row">
       <div class="large-12 columns">
-        <h1>Welcome to Foundation</h1>
+        <h1>June Bootcamp - Let's Burn it!!!!!!</h1>
       </div>
     </div>
 
     <div class="row">
       <div class="large-12 columns">
         <div class="panel">
-          <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-          <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-          <p>Once you've exhausted the fun in this document, you should check out:</p>
+          <h3>Ready..steady..go ... </h3>
+          <p>Take a look at the information below!<br>
+           Be ready to start the most exciting and life changing 28 days of your life!</p>
           <div class="row">
             <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
+              <p><a href="http://burnitfitness.acemlnc.com/lt.php?s=5d5b2613d290108e1572489cfc4e55d5&i=44A58A34A1778">Full Timetable</a><br />Plan your classes ahead for great results</p>
             </div>
             <div class="large-4 medium-4 columns">
-              <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
+              <p><a href="https://drive.google.com/file/d/1uqjV8JXjjUhbAUdWQmhYPzhKw2fcNkOr/view">Intensity Meal Planner</a><br />These online recipes offer you a chance to prepare delicious and nutritious meals for the week ahead.. Eat well.. feel good.</p>
             </div>
             <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
+              <p><a href="https://docs.google.com/spreadsheets/d/13f29TYjzN3OvTeggXKr9Gd_YkxJubIxFZ0hDMQfvvNY/edit?usp=sharing">Start your food diary</a><br />Fill in your food daily for personal feeback and tips weekly</p>
             </div>
           </div>
           <div class="row">
             <div class="large-4 medium-4 medium-push-2 columns">
-              <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
+              <p><a href="http://burnitfitness.co.uk/">Burn It website </a><br />Latest info, team profiles, special offers and more.</p>
             </div>
             <div class="large-4 medium-4 medium-pull-2 columns">
-              <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
+              <p><a href="https://twitter.com/BurnItLondon"> #BurnItLondon</a><br />Ping us on Twitter if you have questions. </p>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+     <div class="row">
+        <div class="large-6 columns">
+          <h4>Bootcamp days down ....How many to go?</h4>
+          <div class="progress [small-6 large-9] [secondary alert success] [radius round]">
+              <span class="meter" style="width: 60%"></span><br>
+            <span><p>Plan to get the most out of days left! </p></span></br>
+        </div>
+        <br>
+      </div>
+
+        <div class="large-12 columns">
+          <div class="panel">
+            <h4> 3 locations to train in!</h4>
+            <p>Check where you are going </p>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1_rNejDyv8e435bzVV6dnEW_Uj6eDzN2e" width="640" height="480"></iframe>
+          </div>
+        </div>
+    </div>
+
     <div class="row">
       <div class="large-8 medium-8 columns">
-        <h5>Here&rsquo;s your basic grid:</h5>
+        <h5>Here&rsquo;s the news section:</h5>
         <!-- Grid Example -->
 
         <div class="row">
           <div class="large-12 columns">
             <div class="callout panel">
-              <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+              <p><strong>This is a twelve column section in a row.</strong> <br>Watch here for blog and news updates.... </p>
+              <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBurnItLondon%2Fvideos%2F1754884714542080%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="large-6 medium-6 columns">
             <div class="callout panel">
-              <p>Six columns</p>
+              <p>Coach of last week</p>
             </div>
           </div>
           <div class="large-6 medium-6 columns">
             <div class="callout panel">
-              <p>Six columns</p>
+              <p>Class of last weekly</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="large-4 medium-4 small-4 columns">
             <div class="callout panel">
-              <p>Four columns</p>
+              <p>Highest attendee</p>
             </div>
           </div>
           <div class="large-4 medium-4 small-4 columns">
             <div class="callout panel">
-              <p>Four columns</p>
+              <p>Persistent and hard worker of the week</p>
             </div>
           </div>
           <div class="large-4 medium-4 small-4 columns">
             <div class="callout panel">
-              <p>Four columns</p>
+              <p>Top food diary</p>
             </div>
           </div>
         </div>
 
         <hr />
 
-        <h5>We bet you&rsquo;ll need a form somewhere:</h5>
+          <div class="row">
+            <div class="large-12 columns">
+              <label>Class of the week</label>
+              <select>
+                <option value="Box Fit">Box Fit</option>
+                <option value="3-2-1">3-2-1</option>
+                <option value="Morning Mayhem">Morning Mayhem</option>
+                <option value="Sunrise run">Sunrise run</option>
+                <option value="HiiT it Hard">HiiT it Hard</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <h5>Weekly check in</h5>
+            <div class="large-6 medium-6 columns">
+              <label>Coach of the week</label>
+              <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Gareth</label>
+              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Jamie</label>
+              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Jim</label>
+              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Louise</label>
+              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Melissa</label>
+            </div>
+            <div class="large-6 medium-6 columns">
+              <label>Check these out</label>
+              <input id="checkbox1" type="checkbox"><label for="checkbox1">Feeling good</label>
+              <input id="checkbox2" type="checkbox"><label for="checkbox2">under the weather</label>
+            </div>
+          </div>
+          <div class="row">
+        <h5>Tell us how you are doing against your targets</h5>
         <form>
           <div class="row">
             <div class="large-12 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-12.columns" />
+              <label>Goal</label>
+              <input type="text" placeholder="Aim to attend 6 classes" />
             </div>
           </div>
           <div class="row">
             <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
+              <label>First name</label>
+              <input type="text" placeholder="Ariadne" />
             </div>
             <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
+              <label>Surname</label>
+              <input type="text" placeholder="Allgoingwell" />
             </div>
             <div class="large-4 medium-4 columns">
               <div class="row collapse">
-                <label>Input Label</label>
+                <label>Email</label>
                 <div class="small-9 columns">
-                  <input type="text" placeholder="small-9.columns" />
+                  <input type="text" placeholder="a.allgoingwell.com" />
                 </div>
                 <div class="small-3 columns">
                   <span class="postfix">.com</span>
@@ -117,33 +166,9 @@
               </div>
             </div>
           </div>
-          <div class="row">
             <div class="large-12 columns">
-              <label>Select Box</label>
-              <select>
-                <option value="husker">Husker</option>
-                <option value="starbuck">Starbuck</option>
-                <option value="hotdog">Hot Dog</option>
-                <option value="apollo">Apollo</option>
-              </select>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-6 medium-6 columns">
-              <label>Choose Your Favorite</label>
-              <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-            </div>
-            <div class="large-6 medium-6 columns">
-              <label>Check these out</label>
-              <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-              <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Textarea Label</label>
-              <textarea placeholder="small-12.columns"></textarea>
+              <label>Comments for the week</label>
+              <textarea placeholder="Aching all over from shock of exercise.... "></textarea>
             </div>
           </div>
         </form>
@@ -151,19 +176,14 @@
 
       <div class="large-4 medium-4 columns">
         <h5>Try one of these buttons:</h5>
-        <p><a href="#" class="small button">Simple Button</a><br/>
+<!--         <p><a href="http://burnitfitness.co.uk/" class="small button">Simple Button</a><br/>
         <a href="#" class="small radius button">Radius Button</a><br/>
-        <a href="#" class="small round button">Round Button</a><br/>
-        <a href="#" class="medium success button">Success Btn</a><br/>
-        <a href="#" class="medium alert button">Alert Btn</a><br/>
-        <a href="#" class="medium secondary button">Secondary Btn</a></p>
-        <div class="panel">
-          <h5>So many components, girl!</h5>
-          <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
+        <a href="#" class="small round button">Round Button</a><br/> -->
+        <a href="#" class="medium success button">Review your classes</a><br/>
+        <a href="http://burnitfitness.co.uk/" class="medium alert button">Go to BurnIt</a><br/>
+        <a href="#" class="medium secondary button">Track your progress</a></p>
         </div>
-      </div>
-    </div>
+
 <!-- boiler plate below -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
