--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Melissa</label>
             </div>
             <div class="large-6 medium-6 columns">
-              <label>Check these out</label>
+              <label>Mood Check</label>
               <input id="checkbox1" type="checkbox"><label for="checkbox1">Feeling good</label>
               <input id="checkbox2" type="checkbox"><label for="checkbox2">under the weather</label>
             </div>
@@ -142,23 +142,23 @@
           <div class="row">
             <div class="large-12 columns">
               <label>Goal</label>
-              <input type="text" placeholder="Aim to attend 6 classes" />
+              <input type="text" placeholder="e.g. Aim to attend 6 classes" />
             </div>
           </div>
           <div class="row">
             <div class="large-4 medium-4 columns">
               <label>First name</label>
-              <input type="text" placeholder="Ariadne" />
+              <input type="text" placeholder="e.g. Ariadne" />
             </div>
             <div class="large-4 medium-4 columns">
               <label>Surname</label>
-              <input type="text" placeholder="Allgoingwell" />
+              <input type="text" placeholder="e.g. Allgoingwell" />
             </div>
             <div class="large-4 medium-4 columns">
               <div class="row collapse">
                 <label>Email</label>
                 <div class="small-9 columns">
-                  <input type="text" placeholder="a.allgoingwell.com" />
+                  <input type="text" placeholder="e.g. a.allgoingwell.com" />
                 </div>
                 <div class="small-3 columns">
                   <span class="postfix">.com</span>
@@ -168,7 +168,7 @@
           </div>
             <div class="large-12 columns">
               <label>Comments for the week</label>
-              <textarea placeholder="Aching all over from shock of exercise.... "></textarea>
+              <textarea placeholder="e.g. Aching all over from shock of exercise.... "></textarea>
             </div>
           </div>
         </form>
