--- a/burnit.html
+++ b/burnit.html
@@ -110,7 +110,7 @@
 
           <div class="row">
             <div class="large-12 columns">
-              <label>Class of the week</label>
+              <label>Vote for class of the week</label>
               <select>
                 <option value="Box Fit">Box Fit</option>
                 <option value="3-2-1">3-2-1</option>
@@ -123,7 +123,7 @@
           <div class="row">
             <h5>Weekly check in</h5>
             <div class="large-6 medium-6 columns">
-              <label>Coach of the week</label>
+              <label>Vote for coach of the week</label>
               <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Gareth</label>
               <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Jamie</label>
               <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Jim</label>
@@ -133,7 +133,7 @@
             <div class="large-6 medium-6 columns">
               <label>Mood Check</label>
               <input id="checkbox1" type="checkbox"><label for="checkbox1">Feeling good</label>
-              <input id="checkbox2" type="checkbox"><label for="checkbox2">under the weather</label>
+              <input id="checkbox2" type="checkbox"><label for="checkbox2">Below par</label>
             </div>
           </div>
           <div class="row">
@@ -180,8 +180,8 @@
         <a href="#" class="small radius button">Radius Button</a><br/>
         <a href="#" class="small round button">Round Button</a><br/> -->
         <a href="https://www.google.co.uk/search?q=burn+it+westcombe+hill" class="medium success button">Review your classes</a><br/>
-        <a href="http://burnitfitness.co.uk/" class="medium alert button">Go to BurnIt</a><br/>
-        <a href="#" class="medium secondary button">Track your progress</a></p>
+        <a href="http://burnitfitness.co.uk/" class="medium alert button">Go to BurnIt site</a><br/>
+        <a href="https://www.facebook.com/BurnItLondon/?hc_ref=ARRpvQ_UMVHJtJI0CkpCWhpGjGK-41XBuQI8xfIIwSSwip0SaGkLCtkq85WHGyNcf0c&fref=nf" class="medium secondary button">Follow us on Facebook</a></p>
         </div>
 
 <!-- boiler plate below -->
