implemented 2nd our science CTA

--- a/cta.html
+++ b/cta.html
@@ -9,31 +9,50 @@
   </head>
   <!-- boiler plate above -->
   <body>
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>This is a CTA example</h1>
-        <!--  whole box for CTA-->
-          <!-- <div class="par parsys"> -->
-            <div class="ctabutton parbase section">
-              <div class="visit">
-                <!-- <div class="home-thumb-right"> -->
-                  <h3>Visit</h3>
-                    <a href="http://www.nhm.ac.uk/visit.html">
-                      <img src="./Sophie.jpg" alt="Sophie">
-                        <div class="thumb-caption  visit ">
-                          <a href="http://www.nhm.ac.uk/visit.html">
-                            <p>Plan a great day out at the Museum</p>
-                          </a>
-                        </div>
-                      </img>
-                    </a>
-                <!-- </div> -->
-              </div>
-            </div>
-          <!-- </div> -->
+  <h1>CTA example</h1>
+    <div class="row2cellsequals section">
+      <div class="row">
+        <div class="large-6 medium-6 columns large6-margin">
 
+              <div class="ctabutton">
+                <div class="visit">
+                  <div class="home-thumb-right">
+                    <h3>Visit</h3>
+                      <a href="http://www.nhm.ac.uk/visit.html">
+                        <img src="./Sophie.jpg" alt="Sophie">
+                          <div class="thumb-caption  visit ">
+                            <a href="http://www.nhm.ac.uk/visit.html">
+                              <p>Plan a great day out at the Museum</p>
+                            </a>
+                          </div>
+                        </img>
+                      </a>
+                  </div>
+                </div>
+              </div>
+        </div>
+
+      <div class="large-6 medium-6 columns large6-margin">
+
+          <div class="ctabutton">
+                <div class="science">
+                  <div class="home-thumb-right">
+                    <h3>Our Science</h3>
+                      <a href="http://www.nhm.ac.uk/our-science.html">
+                        <img src="./sciencecta.jpg" alt="Science">
+                          <div class="thumb-caption  our-science ">
+                            <a href="http://www.nhm.ac.uk/our-science.html">
+                              <p>Explore our research and collections</p>
+                            </a>
+                          </div>
+                        </img>
+                      </a>
+                  </div>
+                </div>
+          </div>
       </div>
-    </div>
+     </div>
+  </div>
 
 <!-- boiler plate below -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
