--- a/cta.html
+++ b/cta.html
@@ -16,7 +16,7 @@
 
               <div class="ctabutton">
                 <div class="visit">
-                  <div class="home-thumb-right">
+                  <!-- <div class="home-thumb-right"> -->
                     <h3>Visit</h3>
                       <a href="http://www.nhm.ac.uk/visit.html">
                         <img src="./Sophie.jpg" alt="Sophie">
@@ -29,14 +29,14 @@
                       </a>
                   </div>
                 </div>
-              </div>
+              <!-- </div> -->
         </div>
 
       <div class="large-6 medium-6 columns large6-margin">
 
           <div class="ctabutton">
                 <div class="science">
-                  <div class="home-thumb-right">
+                  <!-- <div class="home-thumb-right"> -->
                     <h3>Our Science</h3>
                       <a href="http://www.nhm.ac.uk/our-science.html">
                         <img src="./sciencecta.jpg" alt="Science">
