--- a/cta.html
+++ b/cta.html
@@ -1,62 +1,57 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
-    <link rel="stylesheet" href="stylesheets/app.css" />
-    <script src="bower_components/modernizr/modernizr.js"></script>
-  </head>
-  <!-- boiler plate above -->
-  <body>
-  <h1>CTA example</h1>
-    <div class="row2cellsequals section">
-      <div class="row">
-        <div class="large-6 medium-6 columns large6-margin">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Foundation CTA </title>
+		<link rel="stylesheet" href="stylesheets/app.css" />
+		<script src="bower_components/modernizr/modernizr.js"></script>
+	</head>
+	<!-- boiler plate above -->
+	<body>
+		<div class="row2cellsequals section">
+			<div class="row">
+				<div class="large-6 medium-6 columns large6-margin">
 
-              <div class="ctabutton">
-                <div class="visit">
-                  <!-- <div class="home-thumb-right"> -->
-                    <h3>Visit</h3>
-                      <a href="http://www.nhm.ac.uk/visit.html">
-                        <img src="./Sophie.jpg" alt="Sophie">
-                          <div class="thumb-caption  visit ">
-                            <a href="http://www.nhm.ac.uk/visit.html">
-                              <p>Plan a great day out at the Museum</p>
-                            </a>
-                          </div>
-                        </img>
-                      </a>
-                  </div>
-                </div>
-              <!-- </div> -->
-        </div>
+						<div class="visit">
+								<h3>Visit</h3>
+									<a href="http://www.nhm.ac.uk/visit.html">
+										<div class="ctabutton--container">
+											<img class="ctabutton--image-container" src="./Sophie.jpg" alt="Sophie" />
+												<div class="thumb-caption  visit ">
+													<!-- took this href out after discussion and to go as per featured article 1 href for whole-->
+										<!--     <a href="http://www.nhm.ac.uk/visit.html"> -->
+													<p>Plan a great day out at the Museum</p>
+												<!-- </a> -->
+												</div>
+										</div>
+									</a>
+						</div>
+				</div>
 
-      <div class="large-6 medium-6 columns large6-margin">
+				<div class="large-6 medium-6 columns large6-margin">
 
-          <div class="ctabutton">
-                <div class="science">
-                  <!-- <div class="home-thumb-right"> -->
-                    <h3>Our Science</h3>
-                      <a href="http://www.nhm.ac.uk/our-science.html">
-                        <img src="./sciencecta.jpg" alt="Science">
-                          <div class="thumb-caption  our-science ">
-                            <a href="http://www.nhm.ac.uk/our-science.html">
-                              <p>Explore our research and collections</p>
-                            </a>
-                          </div>
-                        </img>
-                      </a>
-                  </div>
-                </div>
-          </div>
-      </div>
-     </div>
-  </div>
+						<div class="science">
+								<h3>Our Science</h3>
+									<a href="http://www.nhm.ac.uk/our-science.html">
+										<div class="ctabutton--container">
+											<img class="ctabutton--image-container" src="./sciencecta.jpg" alt="Science">
+												<div class="thumb-caption  our-science ">
+													<a href="http://www.nhm.ac.uk/our-science.html">
+														<p>Explore our research and collections</p>
+													</a>
+												</div>
+											</img>
+										</div>
+									</a>
+						</div>
+				</div>
+			</div>
+		</div>
 
 <!-- boiler plate below -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/foundation/js/foundation.min.js"></script>
+		<script src="js/app.js"></script>
+	</body>
 </html>
