--- a/featured_article.html
+++ b/featured_article.html
@@ -8,9 +8,25 @@
 		<script src="bower_components/modernizr/modernizr.js"></script>
 	</head>
 	<!-- boiler plate above -->
+	<div class="row">
+		<a href="http://www.nhm.ac.uk/discover/news/2018/march/explore-the-museum-with-sir-david-attenborough.html">
+			<div class = "featuredarticle--container">
+				<div class="featuredarticle--image-container">
+					<img fsjdgjsgl.jpg>
+				</div>
+				<div class ="row">
+					<div class="featuredarticle--text-container">
+						<p class="featuredarticle--tag"> NEWS </p>
+						<h2 class="featuredarticle--title"> Explore the Museum's collection with Sir David Attenborough</h2>
+						<p class="featured-article--date"> 6 March 2018</p>
+						<p class="featuredarticle--description"> Virtual reality is providing unprecedented access to the Museum's most precious specimens.</p>
+					</div>
+				</div>
+			</div>
+		</a>
+	</div>
 
-
-
+	<div class="row"></div>
 
 	<!-- boiler plate below -->
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
