Initial sass skeleton

--- a/featured_article.html
+++ b/featured_article.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Foundation CTA </title>
+		<title>Foundation featured article</title>
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<script src="bower_components/modernizr/modernizr.js"></script>
 	</head>
 	<!-- boiler plate above -->
-	<div class="row">
-		<a href="http://www.nhm.ac.uk/discover/news/2018/march/explore-the-museum-with-sir-david-attenborough.html">
+	<div class= "herosection section">
+		<a href= "http://www.nhm.ac.uk/discover/news/2018/march/explore-the-museum-with-sir-david-attenborough.html">
 			<div class = "featuredarticle--container">
 				<div class="featuredarticle--image-container">
 					<img fsjdgjsgl.jpg>
