restructure /images folder

--- a/cta.html
+++ b/cta.html
@@ -17,7 +17,7 @@
 								<h3>Visit</h3>
 									<a href="http://www.nhm.ac.uk/visit.html">
 										<div class="ctabutton--container">
-											<img class="ctabutton--image-container" src="./Sophie.jpg" alt="Sophie" />
+											<img class="ctabutton--image-container" src="./images/Sophie.jpg" alt="Sophie" />
 												<div class="thumb-caption  visit ">
 													<!-- took this href out after discussion and to go as per featured article 1 href for whole-->
 										<!--     <a href="http://www.nhm.ac.uk/visit.html"> -->
