initial sass hooked up

--- a/hti_4.html
+++ b/hti_4.html
@@ -3,12 +3,25 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Foundation CTA </title>
+		<title>Foundation HTI_4 </title>
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<script src="bower_components/modernizr/modernizr.js"></script>
 	</head>
 	<!-- boiler plate above -->
-
+	<body>
+		<div class= "large-4 medium-4 columns">
+			<div class= "hti">
+				<!-- <div class= "hti-wrapper"> -->
+					<div class= "small-12 medium-12 large-12 columns hti--text-wrapper">
+						<h3 >
+							<a href="http://www.nhm.ac.uk/take-part/nature-groups-near-you/"> Nature Groups near you</a>
+							<p>Find UK-based wildlife and natural history societies, events and activities to match you interests. Discover what's happening near you.</p>
+						</h3>
+					</div>
+				<!-- </div> -->
+			</div>
+		</div>
+	</body>
 
 
 	<!-- boiler plate below -->
