--- a/hti_row.html
+++ b/hti_row.html
@@ -9,22 +9,22 @@
 	</head>
 	<!-- boiler plate above -->
 	<body>
-	<div class = "row" data-equalizer>
+	<div class = "row">
 <!-- 		<div class= "large-8 medium-8 columns" data-equalizer-watch style="height:374px;">
 			<div class = "hti-wrapper" data-equalizer-watch style="height:374px;"> -->
 <!-- text left - photo -->
-	<div class= "large-8 medium-8 columns" data-equalizer >
+	<div class= "large-8 medium-8 columns">
 		<div class= "hti">
 			<!-- hti wrapper unites box and image -->
 		<div class= "hti-wrapper" data-equalizer>
-				<div class= "hti--image-wrapper columns small-8 medium-push-4 large-push-4
-			 medium-4 large-4 " data-equalizer>
+				<div class= "hti--image-wrapper columns small-12 medium-push-6 large-push-6
+			 medium-6 large-6 " data-equalizer-watch
 					 	<a href="http://www.nhm.ac.uk/take-part/citizen-science.html">
 					 		<img alt="People enjoying taking part in a wildlife survey" src="./images/people_wild.JPG">
 						</a>
 					</div>
 <!-- Text hti box to left  -->
-				<div class="hti small-12 medium-pull-4 large-pull-4 medium-4 large-4" data-equalizer>
+<!-- 				<div class="hti small-12 medium-pull-6 large-pull6 medium-6 large-6" data-equalizer-watch -->
 					<div class= "small-12 medium-12 large-12 columns hti--text-wrapper">
 						<h3 >
 							<a href="http://www.nhm.ac.uk/take-part/citizen-science.html"> Citizen Science</a>
@@ -34,7 +34,8 @@
 			</div>
 		</div>
 <!-- hti single item -->
-		<div class= "large-4 medium-4 columns" data-equalizer-watch style="height:282px;" >
+	<div class = "row">
+		<div class= "large-4 medium-4 columns" data-equalizer-watch" >
 			<div class= "hti">
 				<div class= "small-12 medium-12 large-12 columns hti--text-wrapper">
 					<h3 >
