--- a/hti_row.html
+++ b/hti_row.html
@@ -15,39 +15,36 @@
 <!-- text left - photo -->
 	<div class= "large-8 medium-8 columns">
 		<div class= "hti">
-			<!-- hti wrapper unites box and image -->
+
+<!-- hti wrapper unites box and image -->
+
 		<div class= "hti-wrapper" data-equalizer>
-				<div class= "hti--image-wrapper columns small-12 medium-push-6 large-push-6
-			 medium-6 large-6 " data-equalizer-watch
-					 	<a href="http://www.nhm.ac.uk/take-part/citizen-science.html">
-					 		<img alt="People enjoying taking part in a wildlife survey" src="./images/people_wild.JPG">
-						</a>
-					</div>
 <!-- Text hti box to left  -->
-<!-- 				<div class="hti small-12 medium-pull-6 large-pull6 medium-6 large-6" data-equalizer-watch -->
-					<div class= "small-12 medium-12 large-12 columns hti--text-wrapper">
-						<h3 >
-							<a href="http://www.nhm.ac.uk/take-part/citizen-science.html"> Citizen Science</a>
-						</h3>
-						<p>Contribute to scientific research at the Museum. Take part in a wildlife survey, collect samples and data, or help us digitise handwritten collection records.</p>
-				</div>
+
+			<div class= " hti--text-wrapper small-4 medium-4 large-4 columns" data-equalizer-watch>
+					<h3 >
+						<a href="http://www.nhm.ac.uk/take-part/citizen-science.html"> Citizen Science</a>
+					</h3>
+					<p>Contribute to scientific research at the Museum. Take part in a wildlife survey, collect samples and data, or help us digitise handwritten collection records.</p>
+			</div>
+<!-- hti image in panel  -->
+			<div class= "hti--image-wrapper  small-4 medium-4 large-4 columns " data-equalizer-watch>
+			 	<a href="http://www.nhm.ac.uk/take-part/citizen-science.html">
+			 		<img alt="People enjoying taking part in a wildlife survey" src="./images/people_wild.JPG">
+				</a>
+			</div>
+
+			<div class= " hti--text-wrapper small-4 medium-4 large-4 columns" data-equalizer-watch>
+				<h3 >
+					<a href="http://www.nhm.ac.uk/take-part/nature-groups-near-you/"> Nature Groups Near You</a>
+				</h3>
+				<p>Find UK-based wildlife and natural history societies, events and activities to match you interests. Discover what's happening near you.
+				</p>
 			</div>
 		</div>
-<!-- hti single item -->
-	<div class = "row">
-		<div class= "large-4 medium-4 columns" data-equalizer-watch" >
-			<div class= "hti">
-				<div class= "small-12 medium-12 large-12 columns hti--text-wrapper">
-					<h3 >
-						<a href="http://www.nhm.ac.uk/take-part/nature-groups-near-you/"> Nature Groups Near You</a>
-					</h3>
-					<p>Find UK-based wildlife and natural history societies, events and activities to match you interests. Discover what's happening near you.
-					</p>
-				</div>
-			</div>
 		</div>
 	</div>
-	</body>
+
 
 
 	<!-- boiler plate below -->
