--- a/hti_row.html
+++ b/hti_row.html
@@ -9,7 +9,10 @@
 	</head>
 	<!-- boiler plate above -->
 	<body>
-	<div class = "row">
+		<div class= "row2cells21">
+
+		</div>
+	<div class = "row" data-equalizer>
 <!-- 		<div class= "large-8 medium-8 columns" data-equalizer-watch style="height:374px;">
 			<div class = "hti-wrapper" data-equalizer-watch style="height:374px;"> -->
 <!-- text left - photo -->
@@ -18,8 +21,9 @@
 
 <!-- hti wrapper unites box and image -->
 
-		<div class= "hti-wrapper" data-equalizer>
+		<div class= "hti-wrapper" >
 <!-- Text hti box to left  -->
+
 
 			<div class= " hti--text-wrapper small-4 medium-4 large-4 columns" data-equalizer-watch>
 					<h3 >
@@ -28,12 +32,12 @@
 					<p>Contribute to scientific research at the Museum. Take part in a wildlife survey, collect samples and data, or help us digitise handwritten collection records.</p>
 			</div>
 <!-- hti image in panel  -->
-			<div class= "hti--image-wrapper  small-4 medium-4 large-4 columns " data-equalizer-watch>
+			<div class= "hti--image-wrapper  small-4 medium-4 large-4 columns " >
 			 	<a href="http://www.nhm.ac.uk/take-part/citizen-science.html">
-			 		<img alt="People enjoying taking part in a wildlife survey" src="./images/people_wild.JPG">
+			 		<img alt="People enjoying taking part in a wildlife survey" src="./images/people_wild.JPG" data-equalizer-watch >
 				</a>
 			</div>
-
+<!-- hti box on it's own -->
 			<div class= " hti--text-wrapper small-4 medium-4 large-4 columns" data-equalizer-watch>
 				<h3 >
 					<a href="http://www.nhm.ac.uk/take-part/nature-groups-near-you/"> Nature Groups Near You</a>
@@ -41,6 +45,8 @@
 				<p>Find UK-based wildlife and natural history societies, events and activities to match you interests. Discover what's happening near you.
 				</p>
 			</div>
+
+
 		</div>
 		</div>
 	</div>
