--- a/featured_article.html
+++ b/featured_article.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -11,7 +11,7 @@
 	<div class= "herosection section">
 		<a href= "http://www.nhm.ac.uk/discover/news/2018/march/explore-the-museum-with-sir-david-attenborough.html">
 			<div class = "featuredarticle--container">
-				<img class="featuredarticle--image-container" src="./David_attenborough.jpg" alt="David" >
+				<img class="featuredarticle--image-container" src="./images/David_attenborough.jpg" alt="David" >
 					<div class="featuredarticle--text-container">
 						<p class="featuredarticle--tag"> NEWS </p>
 						<h2 class="featuredarticle--title"> Explore the Museum's collection with Sir David Attenborough</h2>
