working validation form

--- a/social-signup.html
+++ b/social-signup.html
@@ -51,7 +51,6 @@
 						<button class="button__newsletter-signup" type="submit">Sign up</button>
 					</div>
 				</div>
-				<input type="text" name="question" class="question">
 				<input type="hidden" name="source" value="www.nhm.ac.uk">
 				<input type="hidden" name="campaign" value="eNewsletters">
 				<div class="row">
@@ -59,9 +58,8 @@
 						<div class="errors"></div>
 					</div>
 				</div>
-			</div>
 <div class="row">
-		<div class="small-12 social-signup--link-icons">
+			<div class="small-12 social-signup--link-icons" id='icons'>
 			<p>Follow us on social media</p>
 			<a href="https://www.facebook.com/naturalhistorymuseum"><img src="./images/fb.jpg"  alt="" class="social-signup--img__social"/></a>
 			<a href="https://twitter.com/NHM_London"><img src="./images/twitter.jpg" alt="" class="social-signup--img__social"/></a>
