added '8 columns' for image

--- a/hti-colour.html
+++ b/hti-colour.html
@@ -9,22 +9,30 @@
 	</head>
 	<!-- boiler plate above -->
 	<body>
-		<div class= "large-4 medium-4 columns">
-			<div class= "hti">
-				<div class= "hti-wrapper">
-					<div class= "small-12 medium-12 large-12 columns hti-visit--text-wrapper">
-						<h3 >
-							Useful links
-						</h3>
-							<p>
-								<a href="http://www.nhm.ac.uk/visit/galleries-and-museum-map.html">Galleries and Museum map</a>
-							</p>
-							<p>
-								<a href="http://www.nhm.ac.uk/visit/facilities-and-access.html"> Facilities and access</a>
-							</p>
-							<p>
-								<a href="http://www.nhm.ac.uk/schools/essential-information-schools.html">Essential information for schools</a>
-							</p>
+		<div class = "row2cells21 section">
+			<div class="row" data-equalizer>
+				<div class="large-8 medium-8 columns hti--image-wrapper"  >
+
+						<img src="./images/darwin.jpg" alt="darwin statue" data-equalizer watch>
+				</div>
+				<div class= "large-4 medium-4 columns" >
+					<div class= "hti">
+						<div class= "hti-wrapper">
+							<div class= "small-12 medium-12 large-12 columns hti-visit--text-wrapper" data-equalizer watch>
+								<h3 >
+									Useful links
+								</h3>
+									<p>
+										<a href="http://www.nhm.ac.uk/visit/galleries-and-museum-map.html">Galleries and Museum map</a>
+									</p>
+									<p>
+										<a href="http://www.nhm.ac.uk/visit/facilities-and-access.html"> Facilities and access</a>
+									</p>
+									<p>
+										<a href="http://www.nhm.ac.uk/schools/essential-information-schools.html">Essential information for schools</a>
+									</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
