--- a/hti-colour.html
+++ b/hti-colour.html
@@ -11,14 +11,14 @@
 	<body>
 		<div class = "row2cells21 section">
 			<div class="row" data-equalizer>
-				<div class="large-8 medium-8 columns hti--image-wrapper"  >
 
-						<img src="./images/darwin.jpg" alt="darwin statue" data-equalizer watch>
+				<div class="large-8 medium-8 columns hti--image-wrapper" data-equalizer-watch>
+						<img src="./images/darwin.jpg" alt="darwin statue" >
 				</div>
 				<div class= "large-4 medium-4 columns" >
 					<div class= "hti">
 						<div class= "hti-wrapper">
-							<div class= "small-12 medium-12 large-12 columns hti-visit--text-wrapper" data-equalizer watch>
+							<div class= "small-12 medium-12 large-12 columns hti-visit--text-wrapper" data-equalizer-watch>
 								<h3 >
 									Useful links
 								</h3>
